# Blog-django-site

./: .gitignore  KNOWN_BUGS.md  package-lock.json  package.json  pyproject.toml  pyrightconfig.json
blog/: db.sqlite3
blog/blog/: settings.py  urls.py  views.py
blog/blog/assets/css/: input.css
blog/blog/static/css/: output.css
blog/comments/: admin.py  models.py  urls.py  views.py
blog/comments/migrations/: 0001_initial.py  0002_alter_verifiedcommenter_email.py
blog/comments/static/comments/scripts/: comments.js
blog/comments/templates/comments/: comment_section.html
blog/landing_page/: views.py
blog/landing_page/templates/landing_page/: index.html
blog/posts/: admin.py  forms.py  models.py  urls.py  views.py
blog/posts/migrations/: 0001_initial.py  0002_post_category_post_description.py  0003_alter_post_category_alter_post_description.py  0004_remove_post_category.py  0005_category_post_category.py  0006_alter_post_category.py  0007_post_post_search_idx.py
blog/posts/static/posts/: input.css  output.css
blog/posts/static/posts/css/: admin_markdown.css  blog_detail.css
blog/posts/static/posts/scripts/: admin_markdown.js  blog_detail.js
blog/posts/templates/posts/: blog.html  blog_detail.html
blog/posts/templatetags/: markdown_extras.py
blog/static/css/: input.css  output.css
blog/static/scripts/: navBarExpand.js
blog/subscription/: admin.py  models.py
blog/subscription/migrations/: 0001_initial.py
blog/templates/: base.html
blog/templates/landing_page/: index.html
blog/templates/legal/: legal.html
