[project]
name = "blog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.2",
    "django-browser-reload>=1.21.0",
    "dotenv>=0.9.9",
    "gunicorn>=25.1.0",
    "markdown>=3.10.2",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.2",
    "whitenoise>=6.12.0",
]

[dependency-groups]
dev = [
    "django-stubs>=5.2.9",
]
